# wasm-pack-problem-example

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: lib.rs  lib_copy.rs
web/: bootstrap.js  index.js  package-lock.json  package.json  webpack.config.js
